Fix alignment in bubble layout of tile error boundary

--- a/res/css/views/rooms/_EventBubbleTile.scss
+++ b/res/css/views/rooms/_EventBubbleTile.scss
@@ -587,3 +587,7 @@ limitations under the License.
         }
     }
 }
+
+.mx_EventTile_tileError[data-layout=bubble] .mx_EventTile_line {
+    flex-direction: column; // restore the centering
+}
